[gd_scene load_steps=13 format=2]

[ext_resource path="res://RaptorRender/GUI/InfoPanels/JobInfoPanel/Job_Info_Panel.gd" type="Script" id=1]
[ext_resource path="res://RaptorRender/GUI/icons/job_status/job_status_200x100.png" type="Texture" id=2]
[ext_resource path="res://RaptorRender/GUI/SortableTable/specific_sortable_table_cell_elements/JobProgressBar/JobProgressBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://RaptorRender/GUI/icons/link/15x15/link_default_15x15.png" type="Texture" id=4]
[ext_resource path="res://RaptorRender/GUI/icons/link/15x15/link_clicked_15x15.png" type="Texture" id=5]
[ext_resource path="res://RaptorRender/GUI/icons/link/15x15/link_hover_15x15.png" type="Texture" id=6]
[ext_resource path="res://RaptorRender/GUI/SortableTable/SortableTable.tscn" type="PackedScene" id=7]
[ext_resource path="res://RaptorRender/GUI/InfoPanels/TryInfoPanel/Try_Info_Panel.tscn" type="PackedScene" id=8]
[ext_resource path="res://RaptorRender/GUI/InfoPanels/JobInfoPanel/ChunkTimeGraph/ChunkTimeGraph.tscn" type="PackedScene" id=9]
[ext_resource path="res://RaptorRender/GUI/InfoPanels/JobInfoPanel/ClientPieChart/ClientPieChart.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://GUI/fonts/Caliban.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = SubResource( 1 )

[node name="JobInfoPanel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -569.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 711.0
margin_bottom = 600.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Details" type="Tabs" parent="TabContainer"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Details"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer"]
margin_right = 703.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 683.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainInfo" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 663.0
margin_bottom = 140.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo"]
margin_right = 663.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 120.0
rect_min_size = Vector2( 150, 100 )
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer"]
margin_left = 154.0
margin_right = 663.0
margin_bottom = 140.0
size_flags_horizontal = 3
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 19.0
margin_right = 509.0
margin_bottom = 121.0
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 489.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = SubResource( 2 )
text = "Custom Job 1"

[node name="StatusLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 489.0
margin_bottom = 48.0
text = "Status: Finished"

[node name="TypeLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 489.0
margin_bottom = 66.0
text = "Type: Blender"

[node name="CreatorLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 489.0
margin_bottom = 84.0
text = "Creator:  Johannes"

[node name="TimeCreatedLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/MainInfo/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 489.0
margin_bottom = 102.0
text = "Created: 25.6.2018 11:45"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 663.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 20 )

[node name="progress" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 663.0
margin_bottom = 262.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/progress"]
margin_right = 663.0
margin_bottom = 94.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/progress/HBoxContainer"]
margin_right = 663.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_constants/margin_left = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/progress/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 663.0
margin_bottom = 94.0
size_flags_vertical = 4

[node name="ProgressHeading" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/progress/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 648.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
text = "Progress"

[node name="JobProgressBar" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/progress/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2

[node name="ActiveClientsLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/progress/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 648.0
margin_bottom = 58.0
text = "Active Clients: 5"

[node name="TimeRenderedLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/progress/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 648.0
margin_bottom = 76.0
text = "Rendered Time: 4d 2h 34m"

[node name="TimeRemainingLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/progress/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 648.0
margin_bottom = 94.0
text = "Rendered Time: 4d 2h 34m"

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 663.0
margin_bottom = 286.0
rect_min_size = Vector2( 0, 20 )

[node name="files" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 290.0
margin_right = 663.0
margin_bottom = 342.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files"]
margin_right = 663.0
margin_bottom = 52.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer"]
margin_right = 663.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_constants/margin_left = 15

[node name="FilesVBox" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 663.0
margin_bottom = 52.0
size_flags_vertical = 4

[node name="FilesHeading" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox"]
margin_right = 648.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
text = "Files"

[node name="SourceFileHBox" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox"]
margin_top = 18.0
margin_right = 648.0
margin_bottom = 33.0
custom_constants/separation = 5

[node name="OpenSceneFolderButton" type="TextureButton" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox/SourceFileHBox"]
margin_right = 15.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="SceneFileLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox/SourceFileHBox"]
margin_left = 20.0
margin_right = 90.0
margin_bottom = 14.0
text = "Source File"

[node name="LogFilesHBox" type="HBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox"]
margin_top = 37.0
margin_right = 648.0
margin_bottom = 52.0
custom_constants/separation = 5

[node name="OpenLogsFolderButton" type="TextureButton" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox/LogFilesHBox"]
margin_right = 15.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="LogFilesLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox/LogFilesHBox"]
margin_left = 20.0
margin_right = 76.0
margin_bottom = 14.0
text = "Log Files"

[node name="Chunk List" type="Tabs" parent="TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true

[node name="VSplitContainer" type="VSplitContainer" parent="TabContainer/Chunk List"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Chunk_List_SortableTable" parent="TabContainer/Chunk List/VSplitContainer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 703.0
margin_bottom = 276.0
table_id = "chunks"

[node name="Panel" type="Panel" parent="TabContainer/Chunk List/VSplitContainer"]
margin_top = 288.0
margin_right = 703.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Chunk List/VSplitContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tries_SortableTable" parent="TabContainer/Chunk List/VSplitContainer/Panel/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 75.0
margin_bottom = 276.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 1
sort_column_secondary = 1
columns_resizable = false
table_id = "tries"

[node name="Panel2" type="Panel" parent="TabContainer/Chunk List/VSplitContainer/Panel/HBoxContainer"]
margin_left = 79.0
margin_right = 703.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TryInfoPanel" parent="TabContainer/Chunk List/VSplitContainer/Panel/HBoxContainer/Panel2" instance=ExtResource( 8 )]
margin_right = 0.0

[node name="Graphs" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true

[node name="VSplitContainer" type="VSplitContainer" parent="TabContainer/Graphs"]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 60

[node name="ChunkTimeGraph" parent="TabContainer/Graphs/VSplitContainer" instance=ExtResource( 9 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 703.0
margin_bottom = 336.0

[node name="ClientPieChart" parent="TabContainer/Graphs/VSplitContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 348.0
margin_right = 703.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Images" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VSplitContainer" type="VSplitContainer" parent="TabContainer/Images"]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 60

[node name="DirScrollContainer" type="ScrollContainer" parent="TabContainer/Images/VSplitContainer"]
margin_right = 703.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="DirVBoxContainer" type="VBoxContainer" parent="TabContainer/Images/VSplitContainer/DirScrollContainer"]
margin_right = 703.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Images/VSplitContainer"]
margin_top = 348.0
margin_right = 703.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="TabContainer/Images/VSplitContainer/MarginContainer"]
margin_right = 703.0
margin_bottom = 216.0

[node name="CenterContainer" type="CenterContainer" parent="TabContainer/Images/VSplitContainer/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PreviewImage" type="TextureRect" parent="TabContainer/Images/VSplitContainer/MarginContainer/Panel/CenterContainer"]
margin_left = 351.0
margin_top = 108.0
margin_right = 351.0
margin_bottom = 108.0
[connection signal="tab_selected" from="TabContainer" to="." method="_on_TabContainer_tab_selected"]
[connection signal="pressed" from="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox/SourceFileHBox/OpenSceneFolderButton" to="." method="_on_OpenSceneFolderButton_pressed"]
[connection signal="pressed" from="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer/files/HBoxContainer/MarginContainer/FilesVBox/LogFilesHBox/OpenLogsFolderButton" to="." method="_on_OpenLogsFolderButton_pressed"]
